tests/baselines/reference/contextualTypeWithUnionTypeObjectLiteral.errors.txt
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(14,5): error TS2322: Type '{ prop: string | number; }' is not assignable to type '{ prop: string; } | { prop: number; }'.
  Type '{ prop: string | number; }' is not assignable to type '{ prop: number; }'.
    Types of property 'prop' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(20,5): error TS2322: Type '{ prop: string | number; }' is not assignable to type '{ prop: string; anotherP: string; } | { prop: number; }'.
  Type '{ prop: string | number; }' is not assignable to type '{ prop: number; }'.
    Types of property 'prop' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(21,5): error TS2322: Type '{ prop: string | number; anotherP: string; }' is not assignable to type '{ prop: string; anotherP: string; } | { prop: number; }'.
  Type '{ prop: string | number; anotherP: string; }' is not assignable to type '{ prop: string; anotherP: string; }'.
    Types of property 'prop' are incompatible.
      Type 'string | number' is not assignable to type 'string'.
        Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(25,5): error TS2322: Type '{ prop: string | number; anotherP: string; }' is not assignable to type '{ prop: string; anotherP: string; } | { prop: number; anotherP1: number; }'.
  Type '{ prop: string | number; anotherP: string; }' is not assignable to type '{ prop: string; anotherP: string; }'.
    Types of property 'prop' are incompatible.
      Type 'string | number' is not assignable to type 'string'.
        Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(29,5): error TS2322: Type '{ prop: string | number; anotherP: string; anotherP1: number; }' is not assignable to type '{ prop: string; anotherP: string; } | { prop: number; anotherP1: number; }'.
  Type '{ prop: string | number; anotherP: string; anotherP1: number; }' is not assignable to type '{ prop: number; anotherP1: number; }'.
    Types of property 'prop' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts(58,5): error TS2322: Type '(a: string, b: number) => string | number' is not assignable to type '((a: string, b: number) => string) | ((a: string, b: number) => number)'.
  Type '(a: string, b: number) => string | number' is not assignable to type '(a: string, b: number) => string'.
    Type 'string | number' is not assignable to type 'string'.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts (6 errors) ====
    var str: string;
    var num: number;
    var strOrNumber: string | number = str || num;
    var objStr: { prop: string };
    var objNum: { prop: number };
    var objStrOrNum1: { prop: string } | { prop: number } = objStr || objNum;
    var objStrOrNum2: { prop: string | number } = objStr || objNum;
    // Below is error because :
    // Spec says:
    // S is a union type and each constituent type of S is assignable to T.
    // T is a union type and S is assignable to at least one constituent type of T.
    // In case of objStrOrNum3, the S is not union Type but object Literal so we go to next step. 
    // Since T is union Type we only allow the assignment of either object with property of type string or object with property of type number but do not allow object with property of type string | number
    var objStrOrNum3: { prop: string } | { prop: number } = {
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ {|prop|0|}: string | number; }' is not assignable to type '{ {|prop|1|}: string; } | { {|prop|2|}: number; }'.
!!! error TS2322:   Type '{ {|prop|3|}: string | number; }' is not assignable to type '{ {|prop|4|}: number; }'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:15:5
!!! annotated symbol 1 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:14:21
!!! annotated symbol 2 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:14:40
!!! annotated symbol 3 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:15:5
!!! annotated symbol 4 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:14:40
        prop: strOrNumber
    };
    var objStrOrNum4: { prop: string | number } = {
        prop: strOrNumber
    };
    var objStrOrNum5: { prop: string; anotherP: string; } | { prop: number } = { prop: strOrNumber };
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ {|prop|0|}: string | number; }' is not assignable to type '{ {|prop|1|}: string; {|anotherP|2|}: string; } | { {|prop|3|}: number; }'.
!!! error TS2322:   Type '{ {|prop|4|}: string | number; }' is not assignable to type '{ {|prop|5|}: number; }'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:78
!!! annotated symbol 1 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:21
!!! annotated symbol 2 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:35
!!! annotated symbol 3 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:59
!!! annotated symbol 4 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:78
!!! annotated symbol 5 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:20:59
    var objStrOrNum6: { prop: string; anotherP: string; } | { prop: number } = {
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ {|prop|0|}: string | number; {|anotherP|1|}: string; }' is not assignable to type '{ {|prop|2|}: string; {|anotherP|3|}: string; } | { {|prop|4|}: number; }'.
!!! error TS2322:   Type '{ {|prop|5|}: string | number; {|anotherP|6|}: string; }' is not assignable to type '{ {|prop|7|}: string; {|anotherP|8|}: string; }'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:22:5
!!! annotated symbol 1 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:23:5
!!! annotated symbol 2 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:21:21
!!! annotated symbol 3 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:21:35
!!! annotated symbol 4 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:21:59
!!! annotated symbol 5 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:22:5
!!! annotated symbol 6 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:23:5
!!! annotated symbol 7 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:21:21
!!! annotated symbol 8 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:21:35
        prop: strOrNumber,
        anotherP: str
    };
    var objStrOrNum7: { prop: string; anotherP: string; } | { prop: number; anotherP1: number } = {
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ {|prop|0|}: string | number; {|anotherP|1|}: string; }' is not assignable to type '{ {|prop|2|}: string; {|anotherP|3|}: string; } | { {|prop|4|}: number; {|anotherP1|5|}: number; }'.
!!! error TS2322:   Type '{ {|prop|6|}: string | number; {|anotherP|7|}: string; }' is not assignable to type '{ {|prop|8|}: string; {|anotherP|9|}: string; }'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:26:5
!!! annotated symbol 1 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:27:5
!!! annotated symbol 2 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:21
!!! annotated symbol 3 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:35
!!! annotated symbol 4 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:59
!!! annotated symbol 5 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:73
!!! annotated symbol 6 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:26:5
!!! annotated symbol 7 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:27:5
!!! annotated symbol 8 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:21
!!! annotated symbol 9 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:25:35
        prop: strOrNumber,
        anotherP: str
    };
    var objStrOrNum8: { prop: string; anotherP: string; } | { prop: number; anotherP1: number } = {
        ~~~~~~~~~~~~
!!! error TS2322: Type '{ {|prop|0|}: string | number; {|anotherP|1|}: string; {|anotherP1|2|}: number; }' is not assignable to type '{ {|prop|3|}: string; {|anotherP|4|}: string; } | { {|prop|5|}: number; {|anotherP1|6|}: number; }'.
!!! error TS2322:   Type '{ {|prop|7|}: string | number; {|anotherP|8|}: string; {|anotherP1|9|}: number; }' is not assignable to type '{ {|prop|10|}: number; {|anotherP1|11|}: number; }'.
!!! error TS2322:     Types of property 'prop' are incompatible.
!!! error TS2322:       Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:30:5
!!! annotated symbol 1 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:31:5
!!! annotated symbol 2 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:32:5
!!! annotated symbol 3 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:21
!!! annotated symbol 4 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:35
!!! annotated symbol 5 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:59
!!! annotated symbol 6 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:73
!!! annotated symbol 7 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:30:5
!!! annotated symbol 8 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:31:5
!!! annotated symbol 9 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:32:5
!!! annotated symbol 10 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:59
!!! annotated symbol 11 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:29:73
        prop: strOrNumber,
        anotherP: str,
        anotherP1: num
    };
    interface I11 {
        commonMethodDifferentReturnType(a: string, b: number): string;
    }
    interface I21 {
        commonMethodDifferentReturnType(a: string, b: number): number;
    }
    var i11: I11;
    var i21: I21;
    var i11Ori21: I11 | I21 = i11;
    var i11Ori21: I11 | I21 = i21;
    var i11Ori21: I11 | I21 = { // Like i1
        commonMethodDifferentReturnType: (a, b) => {
            var z = a.charAt(b);
            return z;
        },
    };
    var i11Ori21: I11 | I21 = { // Like i2
        commonMethodDifferentReturnType: (a, b) => {
            var z = a.charCodeAt(b);
            return z;
        },
    };
    var strOrNumber: string | number;
    var i11Ori21: I11 | I21 = { // Like i1 and i2 both
        commonMethodDifferentReturnType: (a, b) => strOrNumber,
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(a: string, b: number) => string | number' is not assignable to type '((a: string, b: number) => string) | ((a: string, b: number) => number)'.
!!! error TS2322:   Type '(a: string, b: number) => string | number' is not assignable to type '(a: string, b: number) => string'.
!!! error TS2322:     Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/types/union/contextualTypeWithUnionTypeObjectLiteral.ts:35:5: The expected type comes from property 'commonMethodDifferentReturnType' which is declared here on type 'I11 | I21'
    };